# speechometer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/speechometer/: stats.py
src/speechometer/metrics/: speech_metrics.py
src/speechometer/models/: utmos.py
